<resources>
    <string name="app_name">FirstApp</string>
    <string name="login_form">LOGIN FORM</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your UserName</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="rambo_co"><![CDATA[RAMBO&CO]]></string>
    <string name="existing_user">Existing user?</string>
    <string name="sign_uppp">SIGN UPPP!</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_home">Home</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passage">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passage</string>
    <string name="op1">OP1</string>
    <string name="op2">OP2</string>
    <string name="op5">op5</string>
    <string name="passwordd">Password</string>
    <string name="loginn">LOGIN</string>
    <string name="welcome">WELCOME!</string>
    <string name="email">Email</string>
    <string name="enter_passwordd">Enter Password</string>
    <string name="loginnn">LOGIN</string>
</resources>