<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A02323"
    android:backgroundTint="#A02323"
    tools:context=".registerActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="235dp"
        android:layout_height="79dp"
        android:fontFamily="@font/bungee"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:text="@string/sign_uppp"
        android:textColor="#FFFFFF"
        android:textColorLink="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="1024dp"
        android:layout_height="1944dp"
        android:layout_marginTop="228dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pngtreewhite_circle_background_6044507" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="551dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="206dp"
            android:background="#E3A5A5"
            android:backgroundTint="#F8C5C5"
            android:hint="@string/enter_password"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="#F40000"
            android:textColorHint="#882626"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.528" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="299dp"
            android:background="#E3A5A5"
            android:backgroundTint="#F8C5C5"
            android:hint="@string/enter_your_username"
            android:paddingHorizontal="20dp"
            android:textColor="#F40000"
            android:textColorHint="#882626"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="482dp"
            android:background="#E3A5A5"
            android:backgroundTint="#F8C5C5"
            android:hint="@string/enter_full_name"
            android:paddingHorizontal="20dp"
            android:textColor="#F40000"
            android:textColorHint="#882626"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="380dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="391dp"
            android:background="#E3A5A5"
            android:backgroundTint="#F8C5C5"
            android:hint="@string/enter_email"
            android:paddingHorizontal="20dp"
            android:textColor="#F40000"
            android:textColorHint="#882626"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423" />

        <Button
            android:id="@+id/button"
            android:layout_width="208dp"
            android:layout_height="63dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="120dp"
            android:background="#6750A3"
            android:backgroundTint="#6750A3"
            android:fontFamily="@font/audiowide"
            android:outlineAmbientShadowColor="#E1E1E1"
            android:text="SIGN UP"
            android:textColor="#FFFFFF"
            android:textColorLink="#EC0303"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.614"
            app:strokeColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="164dp"
            android:fontFamily="@font/bungee"
            android:outlineAmbientShadowColor="#FFFFFF"
            android:text="@string/existing_user"
            android:textColor="#FFFFFF"
            android:textColorLink="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="120dp"
            android:fontFamily="@font/bungee"
            android:outlineAmbientShadowColor="#FFFFFF"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textColorLink="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.628" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:outlineAmbientShadowColor="#FFFFFF"
        android:text="@string/rambo_co"
        android:textColor="#AE2E2E"
        android:textColorLink="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />
</androidx.constraintlayout.widget.ConstraintLayout>